@@ -6,13 +6,12 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import pl.project.ProjectManagement.model.dto.TaskResultDto;
-import pl.project.ProjectManagement.model.response.SmartResponseEntity;
 import pl.project.ProjectManagement.service.interfaces.InfoService;
 import pl.project.ProjectManagement.service.interfaces.ModelWrapper;
 import pl.project.ProjectManagement.service.interfaces.TaskResultService;
 
 import javax.validation.Valid;
-import java.util.stream.Collectors;
+import java.util.List;
 
 @RestController
 @RequestMapping("/res")
@@ -34,24 +33,26 @@ public class TaskResultController {
 
     @PostMapping
     public ResponseEntity<?> setTaskResult(@RequestBody @Valid TaskResultDto taskResultDto) {
-        return ResponseEntity.ok( new TaskResultDto(this.taskResultService
+        return ResponseEntity.ok(new TaskResultDto(this.taskResultService
                 .setTaskResult(this.modelWrapper.getTaskResultFromTaskResultDto(taskResultDto))));
     }
 
     @GetMapping("/{taskId}")
     public ResponseEntity<?> getTaskResult(@RequestHeader("Authorization") String authorization,
                                            @PathVariable long taskId) {
-        return ResponseEntity.ok( new TaskResultDto(this.taskResultService
+        return ResponseEntity.ok(new TaskResultDto(this.taskResultService
                 .getTaskResult(taskId, this.infoService.getEmailFromJwt(authorization))));
     }
 
     @GetMapping("/task/{taskId}")
     public ResponseEntity<?> getTaskResultsByTask(@RequestHeader("Authorization") String authorization,
                                                   @PathVariable long taskId,
-                                                  Pageable pageable, long size) {
-        return ResponseEntity.ok(new PageImpl<>(this.taskResultService
-                .getTaskResultsByTask(taskId, this.infoService.getEmailFromJwt(authorization))
-                .stream().map(TaskResultDto::new).collect(Collectors.toList()), pageable, size));
+                                                  Pageable pageable) {
+        List<TaskResultDto> taskResultDtoList = taskResultService
+                .getTaskResultsByTask(taskId, this.infoService.getEmailFromJwt(authorization), pageable)
+                .stream().map(TaskResultDto::new).toList();
+
+        return ResponseEntity.ok(new PageImpl<>(taskResultDtoList, pageable, taskResultDtoList.size()));
 
     }
 }
